Spacing Issues Resolved

--- a/src/components/index/styles/community.css
+++ b/src/components/index/styles/community.css
@@ -114,7 +114,7 @@
   flex-direction: column;
   border-radius: 1rem;
   background-color: #ffffff;
-  padding: 2.41rem;
+  padding: 2.1rem;
   gap: 0.94rem;
   width: 18.125rem;
   align-items: left;
@@ -124,7 +124,7 @@
   border-radius: 3.5rem;
   background: var(--Light-3, #ebebf0);
   width: 4rem;
-  padding: .4rem;
+  padding: 0.4rem;
 }
 
 .button-container {
